Fix key-value alignment issue

--- a/static/less/key_value.less
+++ b/static/less/key_value.less
@@ -13,7 +13,7 @@
 
   dd {
     margin-left: 180px;
-    min-height: 18.2px;
+    min-height: 20px;
 
     > span {
       display: block;
